--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -3,7 +3,7 @@
   = render 'layouts/head'
   %body{body_attr}
     = render 'header'
-    %main
+    %div#main-container
       = yield :layout
     = render 'footer'
     = javascript_include_tag "application"
