--- a/app/assets/stylesheets/responsive/l.scss
+++ b/app/assets/stylesheets/responsive/l.scss
@@ -18,4 +18,25 @@
       max-width: $BODY_MAX_WIDTH_WITH_TOOLPANEL;
     }
   }
+
+  html#home {
+    body {
+      header {
+        nav#home-site {
+          padding-top: 5px;
+          justify-content: center;
+          justify-content: space-evenly;
+        }
+      }
+
+      #main-container {
+        flex-wrap: wrap;
+        max-width: 90%;
+
+        main, aside {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
