--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,6 +13,8 @@
 		= link_to "Plus de billets", '/journaux', title: "Tous les billets de la communauté", :class => "button center"
 	%section
 		%h1 Faites vivre LinuxFr.org !
+		%p
+			Tous les articles sont le fruit du travail de la communauté. Grâce au système de rédaction coopérative du site, on peut s’aider les uns les autres. Pas besoin d’expertise pour participer !
 		%div.center-content
 			= link_to "Participez", '/redaction', title: "Participez à la rédaction des dépêches", :class => "button dark"
 			= link_to "En savoir plus", '/a-propos', :class => 'button'
