home: use implicitly home layout, diary shows truncated_body

--- a/app/views/diaries/_short.html.haml
+++ b/app/views/diaries/_short.html.haml
@@ -1,4 +1,2 @@
-= short_article_for short do |c|
-  - c.title = link_to short.title, [short.owner, short]
-  - c.body  = capture do
-    = short.body
+= short_article_for diary do |c|
+  - c.title = link_to diary.title, [diary.owner, diary]
