--- a/app/assets/stylesheets/parts/content.scss
+++ b/app/assets/stylesheets/parts/content.scss
@@ -283,20 +283,47 @@ article {
 }
 
 html#home {
-  article {
-    margin: 1rem 0;
+  section {
+    article {
+      margin: 1rem 0;
 
-    &:not(:first-of-type) {
-      border-top: solid 2px $C_BAS_FOND;
+      &:not(:first-of-type) {
+        border-top: solid 2px $C_BAS_FOND;
+      }
+
+      > h1 {
+        color: $C_HOME_FOOTER;
+        font-size: 1.2rem;
+      }
+
+      footer {
+        font-size: 0.8rem;
+      }
     }
 
-    > h1 {
-      color: $C_HOME_FOOTER;
-      font-size: 1.5rem;
+    >nav {
+      font-size: 0.9rem;
+      padding-left: 4ex;
+
+      p {
+        margin: 0.7rem 0;
+
+        &:not(:first-of-type) {
+          border-top: solid 2px $C_BAS_FOND;
+          padding-top: 0.7rem;
+        }
+      }
+
+      a {
+        font-weight: normal;
+      }
     }
 
-    footer {
-      font-size: 0.8rem;
+    &#polls {
+      ul, .explanations, .total_votes {
+        font-size: 0.9rem;
+        padding-left: 4ex;
+      }
     }
   }
 }
