home button: render all texts with bold wight

--- a/app/assets/stylesheets/parts/home.scss
+++ b/app/assets/stylesheets/parts/home.scss
@@ -93,6 +93,7 @@ html#home {
       padding: 0.7rem;
       border-radius: 1rem;
       color: $C_HOME_HEADER;
+      font-weight: bold;
       border: solid 1px $C_HOME_HEADER;
 
       &.dark {
