moderation add latest comment list

--- a/app/assets/stylesheets/parts/content.scss
+++ b/app/assets/stylesheets/parts/content.scss
@@ -1,6 +1,7 @@
 /* contenu du site (hors commentaire) */
 article,
 ul.threads > li.comment,
+ul.comments_list > li.comment,
 .markdown_cheatsheet,
 #contents > form,
 form#new_post,
