display login name with username
To avoid issue with visual spoofing, we can add login aside the user
display name. This ensure we can always distinguish users, because login
names have to be unique.

To avoid to display too many information in the same line below the
title, the editors and moderator can be hidden with the `<details>` HTML
tag.

Details are hidden by default on content lists and they are shown on
content page.

--- a/app/assets/stylesheets/parts/content.scss
+++ b/app/assets/stylesheets/parts/content.scss
@@ -60,6 +60,18 @@ article {
   }
   .meta {
     color: $C_INTER;
+    .posted_by_detailsblock {
+      margin-bottom: 0.5rem;
+      summary {
+        text-decoration: underline dotted;
+        cursor: help;
+      }
+    }
+    .posted_by_informations {
+      margin: 0.5rem;
+      padding: 0.2rem;
+      border-left: $C_INTER solid 0.1rem;
+    }
   }
   .edited_by {
     cursor: pointer;
