--- a/app/views/moderation/news/_news.html.haml
+++ b/app/views/moderation/news/_news.html.haml
@@ -1,6 +1,6 @@
 = article_for news do |c|
   - c.title = "#{link_to news.section.title, news.section, class: "topic"} : #{link_to news.title, [:moderation, news]}".html_safe
-  - c.meta  = news_posted_by(news)
+  - c.meta  = news_posted_by(news, true)
   - c.image = link_to(image_tag(news.section.image, alt: news.section.title), news.section)
   - c.body  = capture do
     = news.body
