--- a/app/views/news/_preview.html.haml
+++ b/app/views/news/_preview.html.haml
@@ -1,6 +1,6 @@
 = article_for preview do |c|
   - c.title = spellcheck(h preview.title)
-  - c.meta  = news_posted_by(preview)
+  - c.meta  = news_posted_by(preview, false)
   - c.image = link_to(image_tag(preview.section.image, alt: preview.section.title), preview.section)
   - c.body  = capture do
     = spellcheck(preview.body)
