--- a/app/views/redaction/news/show.html.haml
+++ b/app/views/redaction/news/show.html.haml
@@ -14,7 +14,7 @@
 = article_for @news do |c|
   - c.title = capture do
     = render partial: 'short'
-  - c.meta  = news_posted_by(@news)
+  - c.meta  = news_posted_by(@news, false)
   - c.image = link_to(image_tag(@news.section.image, alt: @news.section.title), @news.section)
   - c.body  = capture do
     #first_part
