--- a/app/views/users/posts.html.haml
+++ b/app/views/users/posts.html.haml
@@ -1,6 +1,4 @@
-- content_for :column do
-  = render 'recent'
-  = render 'nodes'
+= render 'nodes', content_type: 'message dans les forums'
 
 =h1 "#{@user.name} a écrit #{pluralize @nodes.total_count, "message"} dans les forums"
 - feed "Flux Atom des messages de #{@user.name} dans les forums"
