--- a/app/views/users/journaux.html.haml
+++ b/app/views/users/journaux.html.haml
@@ -1,6 +1,4 @@
-- content_for :column do
-  = render 'recent'
-  = render 'nodes'
+= render 'nodes', content_type: "journal"
 
 =h1 "#{@user.name} a écrit #{pluralize @nodes.total_count, "journal", "journaux"}"
 - feed "Flux Atom des journaux de #{@user.name}"
