--- a/app/views/users/liens.html.haml
+++ b/app/views/users/liens.html.haml
@@ -1,6 +1,4 @@
-- content_for :column do
-  = render 'recent'
-  = render 'nodes'
+= render 'nodes', content_type: "lien"
 
 =h1 "#{@user.name} a partagé #{pluralize @nodes.total_count, "lien"}"
 - feed "Flux Atom des liens de #{@user.name}"
