--- a/app/views/users/suivi.html.haml
+++ b/app/views/users/suivi.html.haml
@@ -1,6 +1,4 @@
-- content_for :column do
-  = render 'recent'
-  = render 'nodes'
+= render 'nodes', content_type: "entrée de suivi"
 
 =h1 "#{@user.name} a écrit #{pluralize @nodes.total_count, "entrée"} sur le suivi"
 - filter_pagination_params ['id', 'order', 'page']
