test devise update date

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -2,6 +2,8 @@
   =h1 "Paramétrer son compte"
   %p
     Ce formulaire permet de changer les paramètres de votre compte. Le nom du compte ne peut pas être modifié.
+  %p
+    Se rappeler: #{@account}
 
   = render 'form'
   = render 'avatar'
